manifests/jenkins-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    name: jenkins
spec:
  containers:
  - name: jenkins-container
    image: jenkins/jenkins:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
