manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          args: ["--dbpath", "/data/db"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
        volumes:
          - name: mongo-volume
            persistentVolumeClaim:
              claimName: mongo-pvc
