manifests/nginx-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: nginx-pod12
  labels:
    team: integration
    app: todo
spec: 
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
