manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: todo
    team: development
    phase: proof-of-concept
  namespace: default
spec:
  containers:
    - name: nginx
      image: 1.14.2
      ports:
      - containerPort: 80
