manifests/tomcat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  labels:
    name: tomcat
    team: development
spec:
  containers:
  - name: tomcat-image
    image: tomcat:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
