manifests/headless-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo-headless-service
spec:
  ports:
    - name: mongo-headless-service
      port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
