manifests/mongo-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: mongo-svc
spec:
  ports:
  - port: 27017
    protocol: TCP   
    targetPort: 27017
    nodePort: 32000
  selector: 
    app: mongo
  type: NodePort
