manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 8082
      targetPort: 80
